--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,12 @@
             <artifactId>servlet-api</artifactId>
             <version>2.5</version>
         </dependency>
+        
+        <dependency>    
+		    <groupId>org.springframework</groupId>    
+		    <artifactId>spring-context-support</artifactId>    
+		    <version>${spring.version}</version>    
+		</dependency>    
 
         <dependency>
             <groupId>javax.servlet.jsp</groupId>
@@ -37,7 +43,6 @@
             <version>2.1</version>
             <scope>provided</scope>
         </dependency>
-
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-webmvc</artifactId>
@@ -51,6 +56,35 @@
             <scope>test</scope>
         </dependency>
         
+        <dependency>
+	       	<groupId>com.fasterxml.jackson.core</groupId>  
+	               <artifactId>jackson-core</artifactId>  
+	               <version>2.1.0</version>  
+         </dependency>  
+         <dependency>  
+               <groupId>com.fasterxml.jackson.core</groupId>  
+               <artifactId>jackson-databind</artifactId>  
+               <version>2.1.0</version>  
+          </dependency>  
+          <dependency>
+               <groupId>com.fasterxml.jackson.core</groupId>  
+               <artifactId>jackson-annotations</artifactId>  
+               <version>2.1.0</version>  
+         </dependency>
+         
+      	<!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
+		<dependency>
+		    <groupId>commons-io</groupId>
+		    <artifactId>commons-io</artifactId>
+		    <version>2.5</version>
+		</dependency>
+
+		  
+		<dependency>
+			<groupId>commons-fileupload</groupId>
+			<artifactId>commons-fileupload</artifactId>
+			<version>1.3.1</version>
+		</dependency>
         <!-- fastdfs-client 引入 -->
 		<!-- https://mvnrepository.com/artifact/net.oschina.zcx7878/fastdfs-client-java -->
 		<dependency>
