--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,12 @@
                <version>2.1.0</version>  
          </dependency>
          
+         <dependency>
+			    <groupId>org.freemarker</groupId>
+			    <artifactId>freemarker</artifactId>
+			    <version>2.3.20</version>
+	     </dependency>
+
       	<!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
 		<dependency>
 		    <groupId>commons-io</groupId>
