--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,14 @@
             <scope>test</scope>
         </dependency>
         
+        <!-- https://mvnrepository.com/artifact/com.alibaba/fastjson -->
+		<dependency>
+		    <groupId>com.alibaba</groupId>
+		    <artifactId>fastjson</artifactId>
+		    <version>1.2.46</version>
+		</dependency>
+        
+        
         <dependency>
 	       	<groupId>com.fasterxml.jackson.core</groupId>  
 	               <artifactId>jackson-core</artifactId>  
