:seedling: fastDFS 搭建并测试成功！

--- a/resources/dfs/fastDFSClient.properties
+++ b/resources/dfs/fastDFSClient.properties
@@ -1,3 +1,20 @@
-connect_timeout=5
-network_timeout=30
-tracker_server=67.218.158.137:22122
+############fastDFS相关参数配置####### Made By Jason ########
+#注1：tracker_server指向您自己IP地址和端口，1-n个
+#注2：除了tracker_server，其它配置项都是可选的
+#注3:.conf 配置文件文件所在位置可以是项目classpath(或OS文件系统目录比如/opt/):
+#注4:.conf 配置文件优先按OS文件系统路径读取，没有找到才查找项目classpath，尤其针对linux环境下的相对路径
+#注5:其他相关参考:https://github.com/happyfish100/fastdfs-client-java
+#连接超时时间
+connect_timeout = 30
+#网络超时时间
+network_timeout = 60
+#字符集编码  
+charset = ISO8859-1
+# 
+http.tracker_http_port = 8090  
+http.anti_steal_token = no  
+http.secret_key = 123456
+
+#服务地址端口
+tracker_server = 67.218.158.137:22122  
+##########################################################
