:star: fastDFS opts

--- a/resources/dfs/fastDFSClient.properties
+++ b/resources/dfs/fastDFSClient.properties
@@ -9,7 +9,7 @@ connect_timeout = 30
 #网络超时时间
 network_timeout = 60
 #字符集编码  
-charset = ISO8859-1
+charset = UTF-8
 # 
 http.tracker_http_port = 8090  
 http.anti_steal_token = no  
