--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,13 @@
   
   <dependencies>
   
+  	<!-- protobuf  -->
+	<dependency>
+	    <groupId>com.google.protobuf</groupId>
+	    <artifactId>protobuf-java</artifactId>
+	    <version>2.5.0</version>
+	</dependency>
+  
     <!-- 163网易测试 -->
 	<dependency>
            <groupId>javax.mail</groupId>
