--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,21 @@
   
   <dependencies>
   
+  	<!-- https://mvnrepository.com/artifact/javax.jms/jms-api -->
+	<!-- <dependency>
+	    <groupId>javax.jms</groupId>
+	    <artifactId>jms-api</artifactId>
+	    <version>1.1-rev-1</version>
+	</dependency> -->
+  
+  
+  	<!-- https://mvnrepository.com/artifact/javax.jms/jms -->
+	<dependency>
+	    <groupId>javax.jms</groupId>
+	    <artifactId>jms</artifactId>
+	    <version>1.1</version>
+	</dependency>
+  
   	<!-- protobuf  -->
 	<dependency>
 	    <groupId>com.google.protobuf</groupId>
