Optz Java core advanced.

--- a/pom.xml
+++ b/pom.xml
@@ -138,11 +138,11 @@
       <version>2.5</version> 
     </dependency>
     
-    <!--  commons-fileupload -->  
-    <dependency> 
-      <groupId>commons-fileupload</groupId>  
-      <artifactId>commons-fileupload</artifactId>  
-      <version>1.3.1</version> 
+    <!--  commons-fileupload -->
+    <dependency>
+      <groupId>commons-fileupload</groupId>
+      <artifactId>commons-fileupload</artifactId>
+      <version>[1.3.3,)</version>
     </dependency>
       
     <!-- fastdfs-client 引入 -->  
@@ -186,7 +186,12 @@
       <artifactId>junit</artifactId>  
       <version>4.11</version>  
       <scope>test</scope> 
-    </dependency> 
+    </dependency>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.12</version>
+    </dependency>
   </dependencies>  
   
   <!-- build 构建配置  -->
