--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+#################################
 # git add to ignore.
 # Modified By Jason. 2018
 /.idea/
@@ -9,4 +10,6 @@
 /.tern-project
 /.myeclipse/
 /doc/
-###########################
+
+/Java-Core-Advanced.iml
+################################
